refactor(ai): result e custo via Optional; service deixa de receber calculator; extrai TestImages
ImageResponse.getResult passa a devolver Optional e ganha firstB64().
GenerateResult.Ok expoe custoBrl(). ImageEditService usa firstB64 e chama
ImageCostCalculator estaticamente, sem injecao. InputImage e PreparedInputs
ganham equals/hashCode/toString. Testes de servico/integracao passam a usar o
helper TestImages para ler imagens do classpath.